navbar svg is now no longer aligned to top

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -65,7 +65,6 @@ body {
     display: inline-block;
     width: 1rem;
     height: 1rem;
-    vertical-align: text-top;
   }
 
   .dropdown-menu {
